--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       UnityLoader.instantiate("unityContainer", "Build/SurveyPage.json");
     </script>
   </head>
-  <body style="height: auto; margin: auto">
-    <div id="unityContainer" ></div>
+  <body align="center">
+    <div id="unityContainer" style="width: 720px; height: 1280px; margin: auto" ></div>
   </body>
 </html>
