--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       UnityLoader.instantiate("unityContainer", "Build/SurveyPage.json");
     </script>
   </head>
-  <body style= "width: 100%; height: 100%;">
+  <body style= "width: auto; height: auto;">
     <div id="unityContainer" style="width: 720px; height: auto; margin: auto"></div>
   </body>
 </html>
