--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<style type="text/css">
+    html, body {
+	width: 100%; height: 100%;
+    }
+</style>
+
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
@@ -9,7 +15,9 @@
       UnityLoader.instantiate("unityContainer", "Build/SurveyPage.json");
     </script>
   </head>
-  <body style= "width: auto; height: auto;">
-    <div id="unityContainer" style="width: 720px; height: auto; margin: auto"></div>
+  <body style= "width: 100%; height: 100%;">
+    <div id="unityContainer" style="width: auto; height: auto; margin: auto"></div>
   </body>
 </html>
+
+
