--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 
 <html lang="en-us">
-  <head>
+  <head style="width: 100%; height: 100%;">
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Survey</title>
@@ -11,11 +11,7 @@
       UnityLoader.instantiate("unityContainer", "Build/SurveyPage.json");
     </script>
   </head>
-  <style type="text/css">
-    html, body {
-	width: 100%; height: 100%;
-    }
-</style>
+
   <body style= "width: 100%; height: 100%;">
     <div id="unityContainer" style="width: auto; height: auto; margin: auto"></div>
   </body>
