--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </script>
   </head>
 
-  <body style= "width: 100%; height: 100%;">
-    <div id="unityContainer" style="width: auto; height: auto; margin: auto"></div>
+  <body style= "height: 100%;">
+    <div id="unityContainer" style="height: auto; margin: auto"></div>
   </body>
 </html>
 
