--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </script>
   </head>
 
-  <body style= "height: 100%;">
+  <body>
     <div id="unityContainer" style="height: auto; margin: auto"></div>
   </body>
 </html>
