--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 
 <html lang="en-us">
-  <head style="width: 100%; height: 100%;">
+  <head style="height: 100%;">
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Survey</title>
