--- a/index.html
+++ b/index.html
@@ -12,6 +12,34 @@
     </script>
   </head>
 
+  <script>
+
+var elem = document.getElementById("unityContainer");
+
+function openFullscreen() {
+
+  if (elem.requestFullscreen) {
+
+    elem.requestFullscreen();
+
+  } else if (elem.mozRequestFullScreen) { /* Firefox */
+
+    elem.mozRequestFullScreen();
+
+  } else if (elem.webkitRequestFullscreen) { /* Chrome, Safari & Opera */
+
+    elem.webkitRequestFullscreen();
+
+  } else if (elem.msRequestFullscreen) { /* IE/Edge */
+
+    elem.msRequestFullscreen();
+
+  }
+
+}
+
+</script>
+
   <body>
     <div id="unityContainer" style="height: auto; margin: auto"></div>
   </body>
