--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-
-
 <html lang="en-us">
-  <head style="height: 100%;">
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Survey</title>
@@ -10,39 +8,23 @@
     <script>
       UnityLoader.instantiate("unityContainer", "Build/SurveyPage.json");
     </script>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        canvas {
+            position: absolute;
+        }
+
+        canvas, .unityContainer, #gameContainer {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
   </head>
-
-  <script>
-
-var elem = document.getElementById("unityContainer");
-
-function openFullscreen() {
-
-  if (elem.requestFullscreen) {
-
-    elem.requestFullscreen();
-
-  } else if (elem.mozRequestFullScreen) { /* Firefox */
-
-    elem.mozRequestFullScreen();
-
-  } else if (elem.webkitRequestFullscreen) { /* Chrome, Safari & Opera */
-
-    elem.webkitRequestFullscreen();
-
-  } else if (elem.msRequestFullscreen) { /* IE/Edge */
-
-    elem.msRequestFullscreen();
-
-  }
-
-}
-
-</script>
-
   <body>
-    <div id="unityContainer" style="height: auto; margin: auto"></div>
+    <div id="unityContainer" style="height=720px; width=480px; margin: auto"></div>
   </body>
 </html>
-
-
