--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
             position: absolute;
         }
 
-        canvas, .unityContainer, #gameContainer {
+        canvas, .webgl-content, #unityContainer {
             width: 100%;
             height: 100%;
         }
     </style>
   </head>
   <body>
-    <div id="unityContainer" style="height=720px; width=480px; margin: auto"></div>
+  <div class="webgl-content">
+    <div id="unityContainer" style="height=720px; width=480px; margin: auto"></div></div>
   </body>
 </html>
