--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
   </head>
   <body>
   <div class="webgl-content">
-    <div id="unityContainer" style="height=720px; width=480px; margin: auto"></div></div>
+    <div id="unityContainer"></div></div>
   </body>
 </html>
