--- a/index.html
+++ b/index.html
@@ -8,24 +8,8 @@
     <script>
       UnityLoader.instantiate("unityContainer", "Build/SurveyPage.json");
     </script>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        canvas {
-            position: absolute;
-        }
-
-        canvas, .webgl-content, #unityContainer {
-            width: 100%;
-            height: 100%;
-        }
-    </style>
   </head>
   <body>
-  <div class="webgl-content">
-    <div id="unityContainer"></div></div>
+    <div id="unityContainer" style="height=720px; width=480px; margin: auto"></div>
   </body>
 </html>
