--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
     <script>
       UnityLoader.instantiate("unityContainer", "Build/SurveyPage.json");
     </script>
+    <style>
+* {   
+ margin: 0;   
+ padding: 0; 
+} 
+ 
+canvas {   
+ width: 100%;   
+ height: 100%;   
+ position: absolute; 
+} 
+    </style>
   </head>
   <body>
-    <div id="unityContainer" style="height=720px; width=480px; margin: auto"></div>
+  <div class="webgl-content">
+    <div id="unityContainer"></div></div>
   </body>
 </html>
