--- a/index.html
+++ b/index.html
@@ -8,21 +8,8 @@
     <script>
       UnityLoader.instantiate("unityContainer", "Build/SurveyPage.json");
     </script>
-    <style>
-* {   
- margin: 0;   
- padding: 0; 
-} 
- 
-canvas {   
- width: 100%;   
- height: 100%;   
- position: absolute; 
-} 
-    </style>
   </head>
   <body>
-  <div class="webgl-content">
-    <div id="unityContainer"></div></div>
+    <div id="unityContainer" style="width: 720px; height: 1280px; margin: auto"></div>
   </body>
 </html>
